--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Bebas+Neue&family=Iansui&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Oswald:wght@200..700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
 * {
     margin: 0;
@@ -8,7 +8,7 @@
 
 body {
     background-color: #FFFFFF;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'barlow condensed', sans-serif;
     min-height: 100vh;
     color: white;
   
@@ -39,6 +39,7 @@ body {
     font-family:Roboto, sans-serif;
     font-weight: 600;
     text-align: center;
+    
 }
 
 p {
@@ -52,6 +53,7 @@ p {
 
 /* Login Section */
 .login-section {
+    margin-top: 30px;
     background-color: #ebebeb;
     padding: 30px;
     border-radius: 15px;
@@ -149,11 +151,11 @@ button:hover {
     background:#ebebeb;
     padding: 20px;
     border-radius: 10px;
-    border-left: 4px solid #000000;
+ 
 }
 
 .product-form h3 {
-    margin-bottom: 15px;
+    margin-bottom: 30px;
     color: #000000;
 }
 
@@ -168,6 +170,7 @@ button:hover {
 .products-section h3 {
     color: #000000;
     margin-bottom: 15px;
+    margin-top: 30px;
 }
 
 .refresh-btn {
@@ -187,8 +190,7 @@ button:hover {
     background: #ebebeb;
     padding: 20px;
     border-radius: 10px;
-    backdrop-filter: blur(10px);
-    border-left: 4px solid #1F2733;
+    backdrop-filter: blur(50px);
     transition: transform 0.3s ease;
 }
 
